Update image and script paths in products.html

--- a/products.html
+++ b/products.html
@@ -11,13 +11,13 @@
     <meta property="og:url" content="https://sav-circuit.com/products.html">
     <meta property="og:title" content="Products - Savanna Circuit">
     <meta property="og:description" content="Explore Savanna Circuit's range of solar cooling and agricultural products.">
-    <meta property="og:image" content="assets/images/sav-logo-long.webp">
+    <meta property="og:image" content="../images/sav-logo-long.png">
 
     <title>Products - Savanna Circuit</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <noscript>
@@ -36,7 +36,7 @@
     <!-- Background is now 100% clear -->
     <div class="hero-background">
         <video autoplay muted loop playsinline class="bg-media">
-            <source src="assets/images/product-page.mp4" type="video/mp4">
+            <source src="../images/product page.mp4" type="video/mp4">
         </video>
     </div>
     <!-- Content is inside a protective "Glass" card -->
@@ -177,11 +177,36 @@
                 </div>
             </div>
 
-            <div id="drying-systems" class="product-category">
-                <h3 class="category-title">Drying Systems</h3>
-                <div class="products-grid single-column">
+            <!-- Solar Processing Series Section -->
+            <div id="solar-processing-series" class="product-category">
+                <h3 class="category-title">Solar Processing Series</h3>
+                <div class="products-grid">
+                    <div class="product-card" data-product="cup-filler-sealer">
+                        <img class="product-image" loading="lazy" src="" alt="">
+                        <h4></h4>
+                        <p class="product-description"></p>
+                        <div class="product-actions">
+                            <a href="" class="cta-button secondary">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="product-card" data-product="homogenizer">
+                        <img class="product-image" loading="lazy" src="" alt="">
+                        <h4></h4>
+                        <p class="product-description"></p>
+                        <div class="product-actions">
+                            <a href="" class="cta-button secondary">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="product-card" data-product="pouch-filler-sealer">
+                        <img class="product-image" loading="lazy" src="" alt="">
+                        <h4></h4>
+                        <p class="product-description"></p>
+                        <div class="product-actions">
+                            <a href="" class="cta-button secondary">Learn More</a>
+                        </div>
+                    </div>
                     <div class="product-card" data-product="eco-sav-dryer">
-                        <img class="product-image small" loading="lazy" src="" alt="">
+                        <img class="product-image" loading="lazy" src="" alt="">
                         <h4></h4>
                         <p class="product-description"></p>
                         <div class="product-actions">
@@ -189,7 +214,7 @@
                         </div>
                     </div>
                 </div>
-            </div>             
+            </div>          
         </div>
     </section>
 
@@ -199,7 +224,7 @@
             <h3 class="category-title">Annual Product Catalogue</h3>
             <div class="products-grid single-column">
                 <div class="product-card">
-                    <img class="product-image" src="assets/images/catalogue.jpeg" alt="Annual Product Catalogue 2026 Preview" loading="lazy" style="height: 250px;">
+                    <img class="product-image" src="../images/catalogue.jpeg" alt="Annual Product Catalogue 2026 Preview" loading="lazy" style="height: 250px;">
                     <h4>Annual Product Catalogue 2026 <span class="badge" style="font-size: 0.7rem; vertical-align: middle; margin-left: 8px;">New 2026</span></h4>
                     <p class="product-description">Explore our full 2026 collection, including technical specs and pricing.<br><small>PDF (2.1 MB) • 4 Pages</small></p>
                     <div class="product-actions">
@@ -215,6 +240,6 @@
     <!--Footer-->
   <div id="footer-placeholder"></div>
 
-    <script src="assets/js/main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
