Update stylesheet and script paths in index.html

--- a/store/index.html
+++ b/store/index.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
     <!-- Fallback for search engines that don't run JavaScript -->
@@ -304,6 +304,6 @@
     <!-- Footer-->
 <div id="footer-placeholder"></div>
 
-    <script src="store-script.js" defer></script>
+   <script src="../../assets/js/store.js " defer></script>
 </body>
 </html>
