--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
     <noscript>
@@ -240,6 +240,6 @@
     <!--Footer-->
   <div id="footer-placeholder"></div>
 
-    <script src="script.js"></script>
+     <script src="assets/js/main.js"></script>
 </body>
 </html>
