--- a/store/products/bmc-solar.html
+++ b/store/products/bmc-solar.html
@@ -110,7 +110,8 @@
             <p>Centralize milk cooling with off-grid reliability</p>
             <div class="cta-buttons">
                 <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20BMC%20Solar%20Milk%20Cooler" target="_blank" rel="noopener" class="cta-button primary large">Request Quote</a>
-                <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20to%20speak%20sales%20about%20BMC%20Solar%20Milk%20Cooler" target="_blank" rel="noopener" class="cta-button secondary large">Speak to Sales</a>
+                <a href="tel:+254798710210" class="cta-button secondary large">Speak to Sales</a>
+
             </div>
         </div>
     </section>
