Update  contact paths  for bmc-hybrid.html

--- a/store/products/bmc-hybrid.html
+++ b/store/products/bmc-hybrid.html
@@ -100,7 +100,8 @@
             <p>Deploy hybrid bulk milk chillers for cooperative hubs</p>
             <div class="action-buttons">
                 <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20BMC%20Hybrid%20Milk%20Cooler" target="_blank" rel="noopener" class="cta-button primary large">Request Quote</a>
-                <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20to%20speak%20with%20an%20expert%20about%20BMC%20Hybrid%20Milk%20Cooler" target="_blank" rel="noopener" class="cta-button secondary large">Talk to an Expert</a>
+                <a href="tel:+254798710210" class="cta-button secondary large">Speak to Sales</a>
+
             </div>
         </div>
     </section>       
