--- a/store/products/eco-sav-dryer.html
+++ b/store/products/eco-sav-dryer.html
@@ -109,8 +109,9 @@
             <h2>Dry your produce faster and effectively</h2>
             <p>Fast produce drying at a cost effective price</p>
             <div class="cta-buttons">
-                <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20solar%20dryer%20"target="_blank" rel="noopener"  class="cta-button primary large">Request Quote</button>
-                <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20enquire%20about%20solar%20dryer%20" target="_blank" rel="noopener" class="cta-button secondary large">Talk to Sales</a>
+                <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20solar%20dryer%20"target="_blank" rel="noopener"  class="cta-button primary large">Request Quote</button>
+                <a href="tel:+254798710210" class="cta-button secondary large">Speak to Sales</a>
+
             </div>
         </div>
     </section>
