--- a/store/products/eco-sav-pasteurizer.html
+++ b/store/products/eco-sav-pasteurizer.html
@@ -104,8 +104,9 @@
             <h2>Enable Safe, Market-Ready Dairy</h2>
             <p>Deploy EcoSav Pasteurisers for reliable, traceable processing</p>
             <div class="cta-buttons">
-                <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Eco-Sav%20Pasteurizer%20100-500L" target="_blank" rel="noopener" class="cta-button primary large">Request Quote</a>
-                <a href="../../contact.html" class="cta-button secondary large">Speak to Sales</a>
+                <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Eco-Sav%20Pasteurizer%20100-500L" target="_blank" rel="noopener" class="cta-button primary large">Request Quote</a>
+                <a href="tel:+254798710210" class="cta-button secondary large">Speak to Sales</a>
+
             </div>
         </div>
     </section>
