Update contact paths for iwd-ice-water-dispenser.html

--- a/store/products/iwd-ice-water-dispenser.html
+++ b/store/products/iwd-ice-water-dispenser.html
@@ -104,8 +104,9 @@
             <h2>Build Your First-Mile Cold Chain</h2>
             <p>Deploy solar-powered Ice Water Dispensers for decentralized cooling access</p>
             <div class="cta-buttons">
-                <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20IWD%20Ice%20Water%20Dispenser" target="_blank" rel="noopener" class="cta-button primary large">Request Quote</a>
-                <a href="../../contact.html" class="cta-button secondary large">Speak to Sales</a>
+                <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20IWD%20Ice%20Water%20Dispenser" target="_blank" rel="noopener" class="cta-button primary large">Request Quote</a>
+                <a href="tel:+254798710210" class="cta-button secondary large">Speak to Sales</a>
+
             </div>
         </div>
     </section>
