Update  contact paths for maziwaplus-dms.html

--- a/store/products/maziwaplus-dms.html
+++ b/store/products/maziwaplus-dms.html
@@ -121,8 +121,9 @@
             <h2>Digitize Your Dairy Operations</h2>
             <p>Unlock traceability, speed, and insights with MaziwaPlus DMS</p>
             <div class="cta-buttons">
-                <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20demo%20for%20MaziwaPlus%DMSL" target="_blank" rel="noopener"class="cta-button primary large">Request Demo</a>
-                <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20to%20speak%20to%20sales%20about%20MaziwaPlus%20DMS" target="_blank" rel="noopener" class="cta-button secondary large">Speak to Sales</a>
+                <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20demo%20for%20MaziwaPlus%DMSL" target="_blank" rel="noopener"class="cta-button primary large">Request Demo</a>
+                <a href="tel:+254798710210" class="cta-button secondary large">Speak to Sales</a>
+
             </div>
         </div>
     </section>
