--- a/store/products/maziwaplus-prechiller-300.html
+++ b/store/products/maziwaplus-prechiller-300.html
@@ -111,8 +111,9 @@
             <h2>Ready to Improve Your Milk Quality?</h2>
             <p>Get your MaziwaPlus Prechiller today with flexible financing options</p>
             <div class="cta-buttons">
-                <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Eco-Sav%20Thermal%20Bags" target="_blank" rel="noopener" class="cta-button primary large">Request Quote</a>
-                <a href="../../contact.html" class="cta-button secondary large">Speak to Sales</a>
+                <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Eco-Sav%20Thermal%20Bags" target="_blank" rel="noopener" class="cta-button primary large">Request Quote</a>
+                <a href="tel:+254798710210" class="cta-button secondary large">Speak to Sales</a>
+
             </div>
         </div>
     </section>    
