--- a/store/products/nomad-cans-10l.html
+++ b/store/products/nomad-cans-10l.html
@@ -111,8 +111,9 @@
             <h2>Reduce Spoilage, Improve Quality</h2>
             <p>Adopt Nomad Cans for secure, cooled milk transport</p>
             <div class="cta-buttons">
-                <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Nomad%20Can%2010L" target="_blank" rel="noopener" class="cta-button primary large">Request Quote</a>
-                <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20to%20speak%20to%20sales%20about%20Nomad%20Can%2010L" target="_blank" rel="noopener" class="cta-button secondary large">Speak to Sales</a>
+                <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Nomad%20Can%2010L" target="_blank" rel="noopener" class="cta-button primary large">Request Quote</a>
+                <a href="tel:+254798710210" class="cta-button secondary large">Speak to Sales</a>
+
             </div>
         </div>
     </section>
