--- a/store/products/nomad-cans-25l.html
+++ b/store/products/nomad-cans-25l.html
@@ -105,7 +105,7 @@
             <h2>Strengthen Your Cooperative</h2>
             <p>Quality milk transport for collective farming success</p>
             <div class="cta-buttons">
-                <button  href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Nomad%20Can%2025L" target="_blank" rel="noopener"class="cta-button primary large">Request Quote</button>
+                <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Nomad%20Can%2025L" target="_blank" rel="noopener"class="cta-button primary large">Request Quote</a>
                 <a href="tel:+254798710210" class="cta-button secondary large">Speak to Sales</a>
 
             </div>
