--- a/store/products/nomad-cans-50l.html
+++ b/store/products/nomad-cans-50l.html
@@ -120,8 +120,9 @@
             <h2>Scale Your Dairy Business</h2>
             <p>Professional-grade milk transport for commercial success</p>
             <div class="cta-buttons">
-                <button class="cta-button primary large">Request Quote</button>
-                <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20fleet%20price%20for%20Nomad%20Can%2050L" target="_blank" rel="noopener" class="cta-button secondary large">Speak to Sales</a>
+                <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20fleet%20price%20for%20Nomad%20Can%2050L" target="_blank" rel="noopener" class="cta-button primary large">Request Quote</a>
+                <a href="tel:+254798710210" class="cta-button secondary large">Speak to Sales</a>
+
             </div>
         </div>
     </section>
