--- a/store/index.html
+++ b/store/index.html
@@ -79,7 +79,7 @@
                         <p class="product-spec">Portable Milk  container</p>
                         <p class="product-description">Durable portable container for mobile operations. Lightweight and efficient for small-scale farmers.</p>
                         <div class="product-actions">
-                            <a href="products-detailed/nomad-cans-10l.html" class="cta-button secondary">Learn More</a>
+                            <a href="products/nomad-cans-10l.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="Nomad Cans - 10L">Add to Cart</a>
                             <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Nomad%20Cans%2010L" target="_blank" rel="noopener" class="cta-button secondary">Request Quote</a>
                         </div>
@@ -92,7 +92,7 @@
                         <p class="product-spec">Mid-capacity container</p>
                         <p class="product-description">Perfect balance between capacity and portability for medium-scale farm operations.</p>
                         <div class="product-actions">
-                            <a href="products-detailed/nomad-cans-25l.html" class="cta-button secondary">Learn More</a>
+                            <a href="products/nomad-cans-25l.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="Nomad Cans - 25L">Add to Cart</a>
                             <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Nomad%20Cans%2025L" target="_blank" rel="noopener" class="cta-button secondary">Request Quote</a>
                         </div>
@@ -105,7 +105,7 @@
                         <p class="product-spec">Heavy-duty container</p>
                         <p class="product-description">High-capacity portable container for bulk operations. Industrial-grade construction for durability.</p>
                         <div class="product-actions">
-                            <a href="products-detailed/nomad-cans-50l.html" class="cta-button secondary">Learn More</a>
+                            <a href="products/nomad-cans-50l.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="Nomad Cans - 50L">Add to Cart</a>
                             <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Nomad%20Cans%2050L" target="_blank" rel="noopener" class="cta-button secondary">Request Quote</a>
                         </div>
@@ -118,7 +118,7 @@
                         <p class="product-spec">Solar-powered cold water</p>
                         <p class="product-description">Solar-powered chilled water for farms and communities. Improves produce preservation and ensured low food spoilage .</p>
                         <div class="product-actions">
-                            <a href="products-detailed/iwd-ice-water-dispenser.html" class="cta-button secondary">Learn More</a>
+                            <a href="products/iwd-ice-water-dispenser.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="IWD Ice Water Dispenser">Add to Cart</a>
                             <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20IWD%20Ice%20Water%20Dispenser" target="_blank" rel="noopener" class="cta-button secondary">Request Quote</a>
                         </div>
@@ -131,7 +131,7 @@
                         <p class="product-spec">Insulated transport bags</p>
                         <p class="product-description">Durable thermal bags for temperature-sensitive product transport. Reusable and environmentally friendly.</p>
                         <div class="product-actions">
-                            <a href="products-detailed/eco-sav-bags.html" class="cta-button secondary">Learn More</a>
+                            <a href="products/eco-sav-bags.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="Eco-Sav Thermal Bags">Add to Cart</a>
                             <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Eco-Sav%20Thermal%20Bags" target="_blank" rel="noopener" class="cta-button secondary">Request Quote</a>
                         </div>
@@ -145,7 +145,7 @@
                         <p class="product-spec">Cloud-based ERP platform</p>
                         <p class="product-description">Comprehensive dairy  management platform with real-time tracking, financial management, and market linkages.</p>
                         <div class="product-actions">
-                            <a href="products-detailed/maziwaplus-dms.html" class="cta-button secondary">Learn More</a>
+                            <a href="products/maziwaplus-dms.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="MaziwaPlus DMS">Subscribe</a>
                             <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20MaziwaPlus%20Dairy%20Management%20System" target="_blank" rel="noopener" class="cta-button secondary">Request Quote</a>
                         </div>
@@ -165,7 +165,7 @@
                         <p class="product-spec">Entry-level hybrid milk chiller</p>
                         <p class="product-description">Efficiently cools and stores milk with hybrid power options. Customizable from 300-1000L capacity.</p>
                         <div class="product-actions">
-                            <a href="products-detailed/maziwaplus-prechiller-300.html" class="cta-button secondary">Learn More</a>
+                            <a href="products/maziwaplus-prechiller-300.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="MaziwaPlus Prechillers 300-1000L">Add to Cart</a>
                             <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20MaziwaPlus%20Prechillers%20300-1000L" target="_blank" rel="noopener" class="cta-button secondary">Request Quote</a>
                         </div>
@@ -178,7 +178,7 @@
                         <p class="product-spec">Advanced hybrid milk chiller</p>
                         <p class="product-description">Premium features for large farms  and milk collection centers. Enhanced efficiency with smart monitoring and analytics.</p>
                         <div class="product-actions">
-                            <a href="products-detailed/maziwaplus-prechiller-pro.html" class="cta-button secondary">Learn More</a>
+                            <a href="products/maziwaplus-prechiller-pro.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="MaziwaPlus Prechillers Pro 200-2000L">Add to Cart</a>
                             <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20MaziwaPlus%20Prechillers%20Pro%20200-2000L" target="_blank" rel="noopener" class="cta-button secondary">Request Quote</a>
                         </div>
@@ -191,7 +191,7 @@
                         <p class="product-spec">Flexible solar + grid power</p>
                         <p class="product-description">Versatile hybrid system combining solar and grid power. Perfect for inconsistent solar areas.</p>
                         <div class="product-actions">
-                            <a href="products-detailed/bmc-hybrid.html" class="cta-button secondary">Learn More</a>
+                            <a href="products/bmc-hybrid.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="BMC Hybrid Milk Cooler">Add to Cart</a>
                             <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20BMC%20Hybrid%20Milk%20Cooler" target="_blank" rel="noopener" class="cta-button secondary">Request Quote</a>
                         </div>
@@ -204,7 +204,7 @@
                         <p class="product-spec">100% solar-powered</p>
                         <p class="product-description">Pure solar cooling with battery storage. Ideal for off-grid locations with maximum sustainability.</p>
                         <div class="product-actions">
-                            <a href="products-detailed/bmc-solar.html" class="cta-button secondary">Learn More</a>
+                            <a href="products/bmc-solar.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="BMC Solar Milk Cooler">Add to Cart</a>
                             <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20BMC%20Solar%20Milk%20Cooler" target="_blank" rel="noopener" class="cta-button secondary">Request Quote</a>
                         </div>
@@ -217,7 +217,7 @@
                         <p class="product-spec">Solar-powered pasteurization</p>
                         <p class="product-description">Professional milk pasteurization system powered by solar. Extends shelf life and meets safety standards.</p>
                         <div class="product-actions">
-                            <a href="products-detailed/eco-sav-pasteurizer.html" class="cta-button secondary">Learn More</a>
+                            <a href="products/eco-sav-pasteurizer.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="Eco-Sav Pasteurizer 100-500L">Add to Cart</a>
                             <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Eco-Sav%20Pasteurizer%20100-500L" target="_blank" rel="noopener" class="cta-button secondary">Request Quote</a>
                         </div>
@@ -291,7 +291,7 @@
                         <p class="product-spec">Solar-powered agricultural dryer</p>
                         <p class="product-description">Professional-grade solar dryer for grains, herbs, and produce. Extend storage life and add premium market value.</p>
                         <div class="product-actions">
-                            <a href="products-detailed/eco-sav-dryer.html" class="cta-button secondary">Learn More</a>
+                            <a href="products/eco-sav-dryer.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="Eco-Sav Solar Dryer">Add to Cart</a>
                             <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Eco-Sav%20Solar%20Dryer" target="_blank" rel="noopener" class="cta-button secondary">Request Quote</a>
                         </div>
