Update image paths and SEO refinement products.html

--- a/products.html
+++ b/products.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Explore Savanna Circuit's range of solar cooling and agricultural products. From milk chillers and dryers to dairy management software.">
-    <meta name="keywords" content="solar milk chiller, dairy equipment, agricultural dryers, farm management software, MaziwaPlus, Nomad Cans">
+    <meta name="description" content="Explore Savanna Circuit's range of Unbroken cold chain solutions and agricultural products. From milk chillers and dryers to dairy management software and fish cold chain solutions.">
+    <meta name="keywords" content="solar milk chiller, Last mile mobilitity,SOLAR-THRIVE, Dairy/Fish Cold Chain, agricultural dryers, farm management software">
     
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://sav-circuit.com/products.html">
     <meta property="og:title" content="Products - Savanna Circuit">
-    <meta property="og:description" content="Explore Savanna Circuit's range of solar cooling and agricultural products.">
-    <meta property="og:image" content="../images/sav-logo-long.png">
+    <meta property="og:description" content="Explore Savanna Circuit's range of Lastmile, Unbroken Cold chains solutions .">
+    <meta property="og:image" content="../assets/images/sav-logo-long.png">
 
     <title>Products - Savanna Circuit</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,7 +36,7 @@
     <!-- Background is now 100% clear -->
     <div class="hero-background">
         <video autoplay muted loop playsinline class="bg-media">
-            <source src="../images/product page.mp4" type="video/mp4">
+            <source src="../assets/images/product page.mp4" type="video/mp4">
         </video>
     </div>
     <!-- Content is inside a protective "Glass" card -->
