SEO optimization for about.html

--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Learn about Savanna Circuit's mission to empower farmers through innovation. Meet our team and discover our values and approach.">
-    <meta name="keywords" content="Savanna Circuit team, mission, vision, agricultural innovation, Kenya tech company">
+    <meta name="description" content="Learn about Savanna Circuit's mission to empower farmers through climate-Tech  innovation and Manufacturing. Meet our team and discover our values and approach.">
+    <meta name="keywords" content="Solar Cold Chain company Africa,Savanna Circuit team, mission, vision, agricultural innovation, Climate-tech Manufacturing">
     
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://sav-circuit.com/about.html">
     <meta property="og:title" content="About Us - Savanna Circuit">
-    <meta property="og:description" content="Learn about Savanna Circuit's mission to empower farmers through innovation.">
+    <meta property="og:description" content="Learn about Savanna Circuit's mission to empower farmers through  climate-Tech  innovation and Manufacturing.">
     <meta property="og:image" content="assets/images/sav-logo-long.webp">
 
     <title>Team - Savanna Circuit</title>
@@ -40,7 +40,7 @@
     <!-- Content is inside a protective "Glass" card -->
     <div class="hero-lead-card">
  <h1>Team</h1>
-    <p>Empowering farmers through innovation, technology, and sustainable solutions</p>
+    <p>Solar Cold Chain Company Empowering farmers through innovation, technology, and sustainable solutions</p>
     </div>
 </section>
    <!-- About Navigation Tabs -->
@@ -60,7 +60,7 @@
       <div class="content-grid">
         <div class="content-block">
           <h3>Research (2017 - 2019)</h3>
-          <p>Initial research and development focused on understanding the challenges faced by small-holder farmers and exploring innovative solutions for dairy management and solar cooling.</p>
+          <p>Initial research and development focused on understanding the challenges faced by small-holder farmers in AFrica and exploring innovative solutions for dairy, Fish and solar cooling.</p>
         </div>
         <div class="content-block">
           <h3>First Model Deployment & Distribution (2020 - 2022)</h3>
@@ -68,7 +68,7 @@
         </div>
         <div class="content-block">
           <h3>Continued Partnerships & Improvements (2023 - To Date)</h3>
-          <p>Expanded product offerings, deepened partnerships, and continuously improved technology and service delivery to maximize farmer impact.</p>
+          <p>Expanded  Cold Chain product offerings, deepened partnerships, and continuously improved technology and service delivery to maximize farmer impact.</p>
         </div>
       </div>
     </div>
@@ -80,7 +80,7 @@
       <div class="mvv-grid">
         <div class="mvv-item" id="mission">
           <h2>Mission</h2>
-          <p>To empower youth and smallholder farmers with innovative, sustainable agricultural solutions that increase productivity, improve livelihoods, and create economic opportunities.</p>
+          <p>To empower youth and smallholder farmers with innovative, sustainable unbroken cold chain solutions that increase productivity, reduce losses, improve livelihoods, and create economic opportunities.</p>
           <h2>Vision</h2>
           <p>A thriving agricultural ecosystem where farmers have access to cutting-edge technology, quality products, and expert support to build sustainable, profitable farms.</p>
         </div>
@@ -132,7 +132,7 @@
             <div class="team-grid">
                 <div class="team-member">
                     <h3>Leadership Team</h3>
-                    <p>Our experienced leadership brings together expertise in agriculture, technology, impact investing, and business development.</p>
+                    <p>Our experienced leadership brings together expertise in solar cooling, impact investing, and business development.</p>
                 </div>
             </div>
             <div id="team-dynamic-container"></div>
