SEO Optimization for careers.html

--- a/careers.html
+++ b/careers.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Join the Savanna Circuit team. View open roles and help us transform agriculture and empower farmers across Africa.">
-    <meta name="keywords" content="careers, jobs in Kenya, agricultural technology jobs, Savanna Circuit careers">
+    <meta name="keywords" content="  Solar cold chain company Africa,careers, jobs in Kenya, agricultural technology jobs, Savanna Circuit careers, unbroken Cold chain solutions, climate-tech manufacturing">
     
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://sav-circuit.com/careers.html">
     <meta property="og:title" content="Careers - Savanna Circuit">
-    <meta property="og:description" content="Join the Savanna Circuit team. View open roles and help us transform agriculture.">
+    <meta property="og:description" content="Join the Savanna Circuit team. View open roles and help us transform agri-tech.">
     <meta property="og:image" content="assets/images/sav-logo-long.webp">
 
     <title>Careers - Savanna Circuit</title>
@@ -40,7 +40,7 @@
     <!-- Content is inside a protective "Glass" card -->
     <div class="hero-lead-card">
         <h1>Join Our Team</h1>
-        <p>Help us transform agriculture and empower farmers across Africa</p>
+        <p>Help us transform agri-tech Manufacturing and empower farmers across Africa</p>
     </div>
 </section>
 
@@ -64,7 +64,7 @@
                 </div>
                 <div class="why-card">
                     <h3>Innovation</h3>
-                    <p>Work with cutting-edge technology, talented teams, and solve real-world problems in agriculture and sustainability.</p>
+                    <p>Work with cutting-edge  cold chain technology, talented teams, and solve real-world problems in agriculture and sustainability.</p>
                 </div>
                 <div class="why-card">
                     <h3> Growth</h3>
