SEO Optimization contact.html

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contact Savanna Circuit for technical support, sales inquiries, or partnership opportunities. We are here to help farmers succeed.">
-    <meta name="keywords" content="contact Savanna Circuit, customer support, technical support, sales, Nairobi, Kenya">
+    <meta name="keywords" content="Solar cold chain company Africa, contact Savanna Circuit, Cold chain customer support, Cold chain technical support,  cold chain sales, climate-tech manufacturing, Nairobi, Kenya">
     
     <!-- Open Graph -->
     <meta property="og:type" content="website">
@@ -57,7 +57,7 @@
         <div class="section-container">
             <h2>Technical Support</h2>
             <div class="support-content">
-                <p>Get help with setup, troubleshooting, and optimization of your equipment and software.</p>   
+                <p>Get help with setup, troubleshooting, and optimization of your cold chain products and software.</p>   
                 <h3>Troubleshooting Common Issues</h3>
                 <div class="faq-section">
                     <details class="faq-item">
