--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Explore Savanna Circuit's range of Unbroken cold chain solutions and agricultural products. From milk chillers and dryers to dairy management software and fish cold chain solutions.">
-    <meta name="keywords" content="solar milk chiller, Last mile mobilitity,SOLAR-THRIVE, Dairy/Fish Cold Chain, agricultural dryers, farm management software">
+    <meta name="keywords" content="Unbroken Cold Chain, solar milk chiller, Last mile mobilitity, SOLAR-THRIVE, Dairy & Fish Cold Chain, agricultural dryers, farm management software">
     
     <!-- Open Graph -->
     <meta property="og:type" content="website">
@@ -42,14 +42,14 @@
     <!-- Content is inside a protective "Glass" card -->
     <div class="hero-lead-card">
         <h1>Our Products</h1>
-        <p>Innovative solutions for sustainable agriculture and farmer prosperity</p>        
+        <p>Innovative Lastmile Unbroken Cold Chains solutions for sustainable agriculture and farmer prosperity</p>        
     </div>
 </section>
 
     <section class="products-showcase">
         <div class="section-container">
             <div id="SOLAR-THRIVE" class="product-category">
-                <h3 class="category-title">SOLAR THRIVE Collection</h3>
+                 <h3 class="category-title"><img src=".. /assets/images/Solar Thrive Logo.png" alt="SOLAR THRIVE Collection" style="max-width: 300px; height: auto; display: block; margin-bottom: 1.5rem;"></h3>
                 <div class="products-grid">
                     <div class="product-card" data-product="nomad-cans-10l">
                         <img class="product-image" loading="lazy" src="" alt="">
@@ -155,21 +155,21 @@
                 <div class="products-grid ">
                     <div class="product-card" data-category="financing-options">
                         <h4>Cooling as a Service (CaaS)</h4>
-                        <p class="product-description">Pay monthly for cooling services without purchasing equipment upfront. Includes installation, maintenance, and support. Fixed monthly fee based on capacity and usage. Ideal for cooperatives and aggregation centers.</p>
+                        <p class="product-description">Pay monthly for  solar cooling services without purchasing equipment upfront. Includes installation, maintenance, and support. Fixed monthly fee based on capacity and usage. Ideal for cooperatives and aggregation centers.</p>
                         <div class="product-actions">
                             <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20to%20apply%20for%20cooling%20as%20a%20Service" target="_blank" rel="noopener" class="cta-button secondary">Learn More</a>
                         </div>
                     </div>
                     <div class="product-card" data-category="financing-options">
                         <h4>Lease Programs</h4>
-                        <p class="product-description">Lease equipment with option to purchase, making solutions accessible to all. Low upfront cost with predictable monthly payments. Option to own at end of term. Flexible terms from 12–48 months.</p>
+                        <p class="product-description">Lease  cold chain equipment with option to purchase, making solutions accessible to all. Low upfront cost with predictable monthly payments. Option to own at end of term. Flexible terms from 12–48 months.</p>
                         <div class="product-actions">
                             <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20to%20apply%20for%20lease%20programs" target="_blank" rel="noopener" class="cta-button secondary">Learn More</a>
                         </div>
                     </div>
                     <div class="product-card" data-category="financing-options">
                         <h4>Hybrid Financing</h4>
-                        <p class="product-description">Customize payment plans tailored to your farm's needs and cash flow. Mix of upfront + subscription or lease. Structured for seasonality of income. Available for both equipment and software.</p>
+                        <p class="product-description">Customized cold chain payment plans tailored to your farm's needs and cash flow. Mix of upfront + subscription or lease. Structured for seasonality of income. Available for both equipment and software.</p>
                         <div class="product-actions">
                             <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20to%20apply%20for%20Hybrid%20financing%20services" target="_blank" rel="noopener" class="cta-button secondary">Learn More</a>
                         </div>
