Solar thrive logo update on  index.html

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 </section>
 
 <!-- Solar Thrive Ecosystem Section -->
-<section class="solar-thrive-section animate-on-scroll">
-    <h2 class="thrive-header">SOLAR THRIVE COLLECTION</h2>
+<section class="solar-thrive-section animate-on-scroll style="text-align: center;">
+    <h2 class="thrive-header"><img src=".. /assets/images/Solar Thrive Logo.png" alt="SOLAR THRIVE Collection" style="max-width: 300px; height: auto; display: block; margin: 0 auto 1rem auto;"></h2>
     <div class="thrive-ecosystem-grid">
         <!-- Left Column -->
         <div class="thrive-tile tile-nomad">
@@ -260,7 +260,7 @@
         <div class="solutions-grid">
             <div class="solution-card">
                 <h3>Our Farmers</h3>
-                <p>Access cutting-edge tools and resources to maximize your farm's potential.</p>
+                <p>Access cutting-edge last mile mobility and  cold chain resources to maximize your farm's potential.</p>
                 <ul class="solution-steps">
                     <li>Learn about solutions on the homepage</li>
                     <li>Compare options on Products</li>
@@ -286,7 +286,7 @@
             </div>
             <div class="solution-card">
                 <h3>Our Distributors</h3>
-                <p>Discover our full range of innovative agricultural solutions.</p>
+                <p>Discover our full range of innovative, lastmile unbrokan cold chain solutions.</p>
                 <ul class="solution-steps">
                     <li>Review our product specifications</li>
                     <li>See the impact our products have on farmers</li>
@@ -300,7 +300,7 @@
             </div>
              <div class="solution-card">
                 <h3>Join Our Team</h3>
-                <p>Join our team as we revolutionize agriculture across the country.</p>
+                <p>Join our team as we revolutionize agri-tech across the country.</p>
                 <ul class="solution-steps">
                     <li>learn more about sct on about</li>
                     <li>Get to know what and how SCT works on about</li>
