Seo optimization and solar thrive logo for  index.html

--- a/store/index.html
+++ b/store/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Shop premium solar cooling and agricultural solutions at Savanna Circuit Store. Find milk,Fish chillers, dryers, and dairy management systems.">
-    <meta name="keywords" content="solar cooling, milk and Fish chillers, dairy equipment, agriculture technology, Kenya, Savanna Circuit">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="description" content="Shop premium solar cooling and agricultural solutions at Savanna Circuit Store. Find Dairy and Fish cold chain solutions, SOLAR-THRIVE dryers, and dairy management systems.">
+    <meta name="keywords" content="Solar cold chain solutions, Mobile cold chain solar cooling, cooling on the go, Fish cold chain solutions, solar fish cooling, landing site chilling, dairy equipment, Dairy cold chain solutions, solar milk cooling, pre-cooling systems agriculture technology,Solar cold chain system, integrated cold chain solution, Solar ice water cooling, ice water milk cooling, low-energy cooling system, Milk transport cooling container, insulated milk can, mobile cold chain container, Dairy/Fish Cold Chain, Solar Cooling, Last-Mile Mobility  Kenya, Savanna Circuit">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -45,7 +45,7 @@
     <!-- Content is inside a protective "Glass" card -->
     <div class="hero-lead-card">
         <h1>Savanna Circuit Store</h1>
-        <p>Premium agricultural solutions with flexible financing options</p>        
+        <p>Premium agricultural cold chain solutions with flexible financing options</p>        
      </div>
     </section> 
 
@@ -70,14 +70,14 @@
         <div class="section-container">
                <!-- Solar Thrive Section: portable solutions and accessories -->
             <div id="SOLAR-THRIVE" class="product-category">
-                <h3 class="category-title">SOLAR THRIVE Collection</h3>
+                <h3 class="category-title"><img src="../images/Solar Thrive Logo.png" alt="SOLAR THRIVE Collection" style="max-width: 300px; height: auto; display: block; margin-bottom: 1.5rem;"></h3>
                 <div class="products-grid">
                     <!-- Product: Nomad Cans 10L -->
                     <div class="product-card" data-category="SOLAR-THRIVE">
                         <img class="product-image" loading="lazy" src="../../assets/images/nomad 10.png" alt="Nomad Cans 10L">
                         <h4>Nomad Cans - 10L</h4>
                         <p class="product-spec">Portable Milk  container</p>
-                        <p class="product-description">Durable portable container for mobile operations. Lightweight and efficient for small-scale farmers.</p>
+                        <p class="product-description">Durable insulated milk transportation container for cooling on the go operations. Lightweight and efficient for small-scale farmers.</p>
                         <div class="product-actions">
                             <a href="products/nomad-cans-10l.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="Nomad Cans - 10L">Add to Cart</a>
@@ -89,8 +89,8 @@
                     <div class="product-card" data-category="SOLAR-THRIVE">
                         <img class="product-image" loading="lazy" src="../../assets/images/Nomad%2025.png" alt="Nomad Cans 25L">
                         <h4>Nomad Cans - 25L</h4>
-                        <p class="product-spec">Mid-capacity container</p>
-                        <p class="product-description">Perfect balance between capacity and portability for medium-scale farm operations.</p>
+                        <p class="product-spec">Mid-capacity mobile cold chain container</p>
+                        <p class="product-description">Perfect balance between capacity and portability for medium-scale cooling on the go farm operations.</p>
                         <div class="product-actions">
                             <a href="products/nomad-cans-25l.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="Nomad Cans - 25L">Add to Cart</a>
@@ -102,8 +102,8 @@
                     <div class="product-card" data-category="SOLAR-THRIVE">
                         <img class="product-image" loading="lazy" src="../../assets/images/NOMAD CANS.png" alt="Nomad Cans 50L">
                         <h4>Nomad Cans - 50L</h4>
-                        <p class="product-spec">Heavy-duty container</p>
-                        <p class="product-description">High-capacity portable container for bulk operations. Industrial-grade construction for durability.</p>
+                        <p class="product-spec">Heavy-duty mobile cold chaincontainer</p>
+                        <p class="product-description">High-capacity portable milk cooling container for bulk operations. Industrial-grade construction for durability.</p>
                         <div class="product-actions">
                             <a href="products/nomad-cans-50l.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="Nomad Cans - 50L">Add to Cart</a>
@@ -115,8 +115,8 @@
                     <div class="product-card" data-category="SOLAR-THRIVE">
                         <img class="product-image" loading="lazy" src="../images/IWD.png" alt="IWD Ice Water Dispenser">
                         <h4>IWD Ice Water Dispenser</h4>
-                        <p class="product-spec">Solar-powered cold water</p>
-                        <p class="product-description">Solar-powered chilled water for farms and communities. Improves produce preservation and ensured low food spoilage .</p>
+                        <p class="product-spec">Solar-powered ice water</p>
+                        <p class="product-description">Solar-powered ice water for farms and communities. Improves cooling on the go, facilitating produce preservation and ensured low food spoilage .</p>
                         <div class="product-actions">
                             <a href="products/iwd-ice-water-dispenser.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="IWD Ice Water Dispenser">Add to Cart</a>
@@ -128,8 +128,8 @@
                     <div class="product-card" data-category="SOLAR-THRIVE">
                         <img class="product-image" loading="lazy" src="../images/Eco-Sav bag(1).png" alt="Eco-Sav Thermal Bags">
                         <h4>Eco-Sav Thermal Bags</h4>
-                        <p class="product-spec">Insulated transport bags</p>
-                        <p class="product-description">Durable thermal bags for temperature-sensitive product transport. Reusable and environmentally friendly.</p>
+                        <p class="product-spec">Insulated Fish and produce transport bags</p>
+                        <p class="product-description">Durable thermal bags for temperature-sensitive produce transport. Reusable and environmentally friendly.</p>
                         <div class="product-actions">
                             <a href="products/eco-sav-bags.html" class="cta-button secondary">Learn More</a>
                             <a href="#" class="cta-button primary add-to-cart" data-product="Eco-Sav Thermal Bags">Add to Cart</a>
